--- a/FeContadoNew/appsettings.json
+++ b/FeContadoNew/appsettings.json
@@ -9,7 +9,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Desarrollo": "Server=172.16.48.11,64362\\QUALIS2019;Database=ITQ_Integration;User Id=asolano; Password=1qa2ws3ed;Trusted_Connection=False;MultipleActiveResultSets=true;",
-    "Pruebas": "Server=10.100.145.14\\NOVASOFTDB;Database=Novasoft;User Id=userIntegrationITQ; Password=1qa2ws3ed;Trusted_Connection=False;MultipleActiveResultSets=true;",
+    "Pruebas": "Server=10.100.145.228\\NOVASOFTDB;Database=ITQ_Integration;User Id=MigraNovasoft; Password=DmN8EbQPiFrcsBw@;Trusted_Connection=False;MultipleActiveResultSets=true;",
     "Produccion": "Server=10.100.145.50\\NOVASOFTDB;Database=ITQ_Integration;User Id=userIntegrationITQ; Password=CE@^mLQrU29K;Trusted_Connection=False;MultipleActiveResultSets=true;",
     "NovaDesarrollo": "Server=172.16.48.11,64362\\QUALIS2019;Database=ErpNovasoftv4;User Id=asolano; Password=1qa2ws3ed;Trusted_Connection=False;MultipleActiveResultSets=true;",
     "NovaPruebas": "Server=10.100.145.14\\NOVASOFTDB;Database=Novasoft;User Id=userIntegrationITQ; Password=1qa2ws3ed;Trusted_Connection=False;MultipleActiveResultSets=true;",
